[package]
name = "prufen"
version = "0.1.2"
authors = ["Monte Johnston <johnston.monte@gmail.com>"]
description = "a command line program for learning German words by the roots"

[dependencies]
ansi_term = "0.10.2"
csv = "1.0.0-beta.3"
getopts = "0.2.4"
rand = "0.3.15"
regex = "0.2.6"
serde = "1.0.27"
serde_derive = "1.0.27"
